--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,10 +5,13 @@
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
+         
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="Hospital Service"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="***REMOVED***"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
