--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,9 @@ dependencies:
     sdk: flutter
   location: ^3.0.0
   fluttertoast: ^4.0.0
+  google_maps_flutter: ^0.5.25+3
   provider: ^4.0.5
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  http: ^0.12.0+4
 
 dev_dependencies:
   flutter_test:
