--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   provider: ^4.0.5
   http: ^0.12.0+4
   flutter_polyline_points: ^0.1.0
+  sliding_up_panel: ^1.0.1
+
 
 
 dev_dependencies:
