--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: hospital_service
+name: hospitality
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
@@ -26,6 +26,8 @@ dependencies:
   http: ^0.12.0+4
   flutter_polyline_points: ^0.1.0
   sliding_up_panel: ^1.0.1
+  shared_preferences: ^0.5.6+3
+
 
 dev_dependencies:
   flutter_test:
