--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   flutter_polyline_points: ^0.1.0
   sliding_up_panel: ^1.0.1
   shared_preferences: ^0.5.6+3
+  percent_indicator: "^2.1.1"
+
   
 
 dev_dependencies:
