--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   sliding_up_panel: ^1.0.1
   shared_preferences: ^0.5.6+3
   percent_indicator: "^2.1.1"
+  intl: ^0.16.1
+
 
   
 
