optimised for iOS

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rbs.hospitality">
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!-- or -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -9,9 +14,9 @@
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="Hospitality"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/icon">
         <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="***REMOVED***"/>
+               android:value="YOUR_OWN_API_KEY"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
