--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,7 @@
 # Web related
 lib/generated_plugin_registrant.dart
 
+lib/src/resources/network/network_config.dart
+
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
